[package]
name = "not-stakkr"
description = "not-stakkr is a platform that allows you to create and queue tweets to be shared when YOU want. You create content when you have time and then use FOSS and NOT pay whatever-ridiculous amount of $$$ for posting them automatically."
documentation = "https://cdn.rawgit.com/nabijaczleweli/not-stakkr/doc/not-stakkr/index.html"
repository = "https://github.com/nabijaczleweli/not-stakkr"
readme = "README.md"
keywords = ["stakkr", "twitter", "tweets", "queue", "content"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.1.0"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
exclude = ["*.enc"]


[dependencies]
rustc-serialize = "0.3"
egg-mode = "0.3"
clap = "2.11"
toml = "0.2"


[[bin]]
name = "not-stakkr"
test = false
doc = false
